--- a/FrontEnd/htmls/root/css/animal.css
+++ b/FrontEnd/htmls/root/css/animal.css
@@ -16,6 +16,32 @@ header {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+button.editButton {
+    background-color: #777; /* Botão cinza médio */
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+button.deleteButton {
+    background-color: #d9534f; /* Vermelho claro */
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 0.9rem;
+    margin-left: 0.5rem;
+}
+
+button.deleteButton:hover {
+    background-color: #c9302c; /* Vermelho mais escuro */
+}
+
 header h1 {
     font-size: 1.5rem;
     margin: 0;
